@@ -33,16 +33,19 @@
       file from your project. For that, click on right mouse button on your
       project and choose <i>Run As &gt; Maven build...</i>:</div>
     <img src="files/run-as-maven-build.png">
-    <div class="wiki" style="display: block;">TMR ME QUEDÉ POR AQUÍ. Then
-      deselect any selected Ant target and select the <i>createWar</i> Ant
-      target:</div>
+    <div class="wiki" style="display: block;">In the dialog type <i>package</i>
+      as goal:</div>
     <img src="files/maven-build-package_en.png">
     <div class="wiki" style="display: block;">Additionally, you can put a better
-      name like <i>Invoicing.createWar</i> in this case. Click on <i>Run</i>.
-      Wait until the the Ant target execution finishes, afterwards get the file
-      <i>Invoicing.war</i> (or <i>YourApplicationName.war</i>) and copy it to
-      the <i>webapps</i> folder of your Tomcat. Your application is already
-      deployed.</div>
+      name like <i>invoicing package</i> in this case. Click on <i>Run</i>.
+      Wait until the the execution finishes.</div>
+    <div class="wiki" style="display: block;">Or if you have Maven installed in
+      your computer and you prefer to use command line:
+      <pre><code class="bash">$ cd invoicing
+$ mvn package
+</code></pre> Afterwards get the file <i>invoicing.war</i> (or y<i>ourapplicationname.war</i>)
+      from <i>target</i> folder in your project and copy it to the <i>webapps</i>
+      folder of your Tomcat. Your application is already deployed.</div>
     <div class="wiki" style="display: block;">
       <h2>Run Tomcat</h2>
       <h2><span style="color: rgb(80, 80, 80); font-family: arial, helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">To
@@ -55,13 +58,13 @@
     </div>
     <div class="wiki" style="display: block;">
       <pre><code class="shell">set JAVA_HOME=C:\Program Files\Java\jdk-11.0.3
-cd tomcat-9.0.24\bin
+cd tomcat-9.0.64\bin
 startup</code></pre>
     </div>
     <div class="wiki" style="display: block;">With Linux/Mac:
       <div class="wiki" style="display: block;">
         <pre><code class="shell">export JAVA_HOME=/usr/lib/jvm/java-11-openjdk
-cd tomcat-9.0.24/bin
+cd tomcat-9.0.64/bin
 ./startup.sh</code></pre>
       </div>
       <div class="wiki" style="display: block;">Of course, adjust the URLs for
@@ -73,11 +76,11 @@ cd tomcat-9.0.24/bin
     <div class="wiki" style="display: block;">
       <h2 id="toc1">Configure against production database</h2>
       By default your application goes against the same database you're using in
-      development, the one defined in the datasource from <i>web/META-INF/context.xml</i>
+      development, the one defined in the datasource from <i>src/main/webapp/META-INF/context.xml</i>
       of your project. Most times you want to use a different database for
       production. To overwrite the database used by your application you have to
       define the datasource in the <i>context.xml</i> found in the <i>conf</i>
-      folder of your Tomcat. For our example, we should edit <i>tomcat-9.0.24/conf/context.xml</i>
+      folder of your Tomcat. For our example, we should edit <i>tomcat-9.0.64/conf/context.xml</i>
       and leave it in this way:</div>
     <div class="wiki" style="display: block;">
       <pre><code class="xml">&lt;?xml version="1.0" encoding="UTF-8"?&gt;
@@ -96,14 +99,14 @@ cd tomcat-9.0.24/bin
     &lt;Manager pathname="" /&gt;
     --&gt;
 	
-	 &lt;Resource name="jdbc/InvoicingDS" auth="Container" type="javax.sql.DataSource"
+	 &lt;Resource name="jdbc/invoicingDS" auth="Container" type="javax.sql.DataSource"
 	      maxTotal="20" maxIdle="5" maxWaitMillis="10000"
 	      username="invoicing" password="sfh4tjdl" driverClassName="org.hsqldb.jdbcDriver"
 	      url="jdbc:hsqldb:hsql://localhost:1999"/&gt;
 	
 &lt;/Context&gt;
 </code></pre> </div>
-    <div class="wiki" style="display: block;">We use <i>InvoicingDS</i> as
+    <div class="wiki" style="display: block;">We use <i>invoicingDS</i> as
       datasource name, the same of the <i>context.xml</i> included in your WAR,
       but we define different <i>url</i>, <i>username</i> and <i>password</i>.</div>
     <div class="wiki" style="display: block;">
