@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>Deploy in production with Tomcat - OpenXava</title>
+    <title>Deploy in production with Tomcat for OpenXava 6 - OpenXava</title>
     <link rel="stylesheet" href="static/style.css" type="text/css">
     <link rel="stylesheet" href="highlight/highlight.css">
     <script src="highlight/highlight.js"></script>
@@ -9,19 +9,16 @@
   </head>
   <body>
     <div class="wiki" style="display: block;">
-      <h1 id="toc0">
-        <span id="breadcrumbs"> 
-        	<span id="openxava"> 
-            <a href="https://www.openxava.org/">
-              <span>o</span>pen<span>x</span>ava </a> </span> 
-          / <a href="index_en.html">documentation</a> / 
-        </span>
-        Deploy in production with Tomcat
-      </h1>
-      You can deploy your OpenXava applications in any Java application server
-      with support for Servlet 3.0 or better. For this guide we're going to use
-      Apache Tomcat to deploy your OpenXava application. Tomcat is the most used
-      and robust Java application server, ideal for production environments.<br>
+      <h1 id="toc0"> <span id="breadcrumbs"> <span id="openxava"> <a href="https://www.openxava.org/">
+              <span>o</span>pen<span>x</span>ava </a> </span> / <a href="index_en.html">documentation</a>
+          / </span> Deploy in production with Tomcat for OpenXava 6</h1>
+      <i>If you're using OpenXava 7.0 or newer look at the <a href="tomcat_en.html">new
+          instructions</a></i></div>
+    <div class="wiki" style="display: block;"> You can deploy your OpenXava 6.x
+      (or older) applications in any Java application server with support for
+      Servlet 3.0 or better. For this guide we're going to use Apache Tomcat to
+      deploy your OpenXava application. Tomcat is the most used and robust Java
+      application server, ideal for production environments.<br>
       <h2 id="toc1">Download and install Tomcat</h2>
       <a href="https://tomcat.apache.org/download-90.cgi">Download Tomcat 9</a>
       from Apache. OpenXava also works fine with Tomcat 8 and 7. Uncompress
@@ -36,7 +33,8 @@
       Tomcat. If you're still using the HSQLDB database included with OpenXava,
       this jar is <i>hsqldb.jar</i> from <i>OpenXava/lib</i>. But if you're
       using MySQL, Oracle, PostgreSQL, etc. you should obtain the correct JDBC
-      driver for your database and copy it to Tomcat <i>lib</i> folder.<br>
+      driver for your database and copy it to Tomcat <i>lib</i>
+      folder.<br>
       <strong></strong></div>
     <div class="wiki" style="display: block;">
       <h2 id="toc1">Create and deploy the WAR<br>
@@ -58,12 +56,9 @@
       <h2>Run Tomcat</h2>
       <h2><span style="color: rgb(80, 80, 80); font-family: arial, helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">To
           start your Tomcat, with Windows click on the<span> </span></span><em
-
           style="color: rgb(80, 80, 80); font-family: arial, helvetica, sans-serif; font-size: 16px; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">Start</em><span
-
           style="color: rgb(80, 80, 80); font-family: arial, helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;"><span>
           </span>button, type<span>&nbsp;</span></span><em style="color: rgb(80, 80, 80); font-family: arial, helvetica, sans-serif; font-size: 16px; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">cmd</em><span
-
           style="color: rgb(80, 80, 80); font-family: arial, helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;"><span>&nbsp;</span>and
           press ENTER, then:</span><span style="color: rgb(80, 80, 80); font-family: arial, helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">:</span></h2>
     </div>
